# charactercrypt

./: README.md  manage.py  pyproject.toml
backend/: Cargo.toml  eff_short_wordlist_1.txt
backend/resources/authn/: eff_short_wordlist_1.txt
backend/src/: generate_magic_code.rs  lib.rs  magic_code.rs  main.rs
charvault/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  package.json  svelte.config.js
frontend/public/: index.html
frontend/public/css/: main.css
frontend/src/: app.css  app.d.ts  app.html  pre_app.css
frontend/src/lib/: Navbar.svelte  SkeletonNavbar.svelte  clickOutside.ts
frontend/src/lib/layout/: Footer.svelte  Navbar.svelte
frontend/src/lib/nav/: Navbar.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/characters/: +page.svelte
frontend/src/routes/login/: +page.svelte
public/: index.html
